--- a/style.css
+++ b/style.css
@@ -25,10 +25,17 @@ body {
     color: #555;
 }
 
+h1 {
+    text-align: center;
+    font-family: Simonetta;
+    padding-top: 2rem;
+    color: #222;
+}
+
 .wrapper {
     width: 1000px;
     position: absolute;
-    top: 50%;
+    top: 53%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
